@@ -522,6 +522,7 @@ MSW:
 - Suppressed spurious character event for decimal key in numeric keypad.
 - Allow to not create wxPaintDC in EVT_PAINT handler.
 - Fix sending of wxEVT_COMMAND_LIST_COL_DRAGGING events in wxListCtrl.
+- Allow putting the UAC symbol on buttons (Chris Spencer).
 
 i18n:
 
